[package]
name = "stream-rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-stream = { version = "0.1.8", features = ["time"] }