[package]
name = "stream-rate-limiter"
version = "0.2.2"
edition = "2021"
authors = ["scx1332 <[email protected]>"]
description = "A rate limiter for Tokio streams"
license = "MIT"
repository = "https://github.com/scx1332/stream-rate-limiter"

[dependencies]
futures-core = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
futures = "0.3"
tokio-stream = { version = "0.1.8", features = ["time"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
